Add hashmap benchmark for compressed chunk coordinates
+ It appears default hashing IVec3 is 2-3x slower than hashing a specialized ChunkCoord struct where we'd only hash the three coordinates at once as a single u32 rather than 3 x i32.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,3 +54,7 @@ required-features = ["noise"]
 [[bench]]
 name = "line_traversal"
 harness = false
+
+[[bench]]
+name = "coord_hash"
+harness = false
